--- a/src/main/resources/templates/distributor/distributor-join.html
+++ b/src/main/resources/templates/distributor/distributor-join.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/join/join.css">
     <link rel="icon" href="/image/favicon.png">
     <title>일반 사용자 - 회원가입</title>
@@ -14,14 +14,14 @@
 <body>
     <div class="box">
         <div class="container">
-            <div id="header"></div>
             <div class="join-box">
+                <th:block th:replace="~{main/header :: header}"></th:block>
                 <div class="join-container">
                     <div class="join-logo-box">
                         <img src="/image/logo.png">
                     </div>
                     <div class="join-input-box">
-                        <form action="#">
+                        <form th:action="@{/distributor/join}" method="post" th:object="${distributorVO}">
                             <div class="join-form-box">
 
                                 <div class="join-form-container">
@@ -29,7 +29,7 @@
                                         <legend class="input-title">업체명</legend>
                                         <div>
                                             <input type="text" class="input-text input-name" name="distributorName"
-                                                placeholder="업체명을 입력해주세요.">
+                                                placeholder="업체명을 입력해주세요." th:field="*{distributorName}">
                                             <div class="error-msg name-error"></div>
                                         </div>
                                     </fieldset>
@@ -40,7 +40,7 @@
                                         <legend class="input-title">이메일</legend>
                                         <div>
                                             <input type="text" class="input-text input-name" name="distributorEmail"
-                                                placeholder="이메일을 입력해주세요.">
+                                                placeholder="이메일을 입력해주세요." th:field="*{distributorEmail}">
                                             <div class="error-msg email-error"></div>
                                         </div>
                                     </fieldset>
@@ -51,8 +51,8 @@
                                         <legend class="input-title">비밀번호</legend>
                                         <div style="position:relative;">
                                             <input type="password" class="input-text input-password"
-                                                name="distributorPassword" placeholder="영문+숫자 조합 8자리 이상 입력해주세요.">
-                                            <button class="sub-button">표시</button>
+                                                name="distributorPassword" placeholder="영문+숫자 조합 8자리 이상 입력해주세요." th:field="*{distributorPassword}">
+                                            <button type="button" class="sub-button">표시</button>
                                         </div>
                                         <div class="error-msg password-error"></div>
                                     </fieldset>
@@ -63,15 +63,15 @@
                                         <legend class="input-title">전화 번호</legend>
                                         <div style="position:relative;">
                                             <input type="text" class="input-text input-phoneNumber"
-                                                name="memberPhoneNumber" placeholder="전화 번호를 입력해주세요." maxlength="11">
+                                                name="distributorPhoneNumber" placeholder="전화 번호를 입력해주세요." maxlength="11" th:field="*{distributorPhoneNumber}">
                                             <div class="error-msg password-error"></div>
                                         </div>
                                     </fieldset>
                                 </div>
 
                                 <div class="join-form-button-box">
-                                    <button class="join-button">회원가입</button>
-                                    <a href="#" class="distributor-join-a">일반 사용자로 가입하시나요?</a>
+                                    <button type="submit" class="join-button">회원가입</button>
+                                    <a href="/member/member-join" class="distributor-join-a">일반 사용자로 가입하시나요?</a>
                                 </div>
                             </div>
                         </form>
@@ -83,6 +83,7 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="/js/main/header.js"></script>
 <script>
     $input = $(".input-text");
     $errorMsg = $(".error-msg");
