--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="stylesheet" href="/static/css/main/header.css">
-    <link rel="icon" href="/static/image/favicon.png">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="icon" href="/image/favicon.png">
     <title>헤더</title>
 </head>
 <body>
-    <div class="header-box">
+    <div class="header-box" th:fragment="header">
         <div class="header-container">
             <div class="header-section-box">
                 <div class="header-mobile-box">
                     <div class="header-mobile-menu-icon-box menu-open-btn">
-                        <img src="/static/image/menu-icon.png">
+                        <img src="/image/menu-icon.png">
                     </div>
                 </div>
                 <div class="logo-box">
                     <div class="logo-container">
-                        <a href="#">
-                            <img class="header-logo" src="/static/image/logo.png">
+                        <a th:href="@{/main/login}">
+                            <img class="header-logo" src="/image/logo.png">
                         </a>
                     </div>
                     <div class="header-web-menu-box">
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <!-- 로그인 x -->
-                <div class="header-login-join-button-box no-login-status"  style="display: none;">
+                <div class="header-login-join-button-box no-login-status" >
                     <div class="header-login-join-box">
                         <ul class="header-login-join-ul">
                             <li class="header-login-join-li"><a href="#"><span>로그인</span></a></li>
@@ -48,7 +48,7 @@
                 </div>
 
                 <!-- 로그인 o -->
-                <div class="header-login-join-button-box login-status">
+                <div class="header-login-join-button-box login-status"  style="display: none;">
                     <div class="header-login-join-box">
                         <div>
                             <ul class="header-login-join-ul">
@@ -57,7 +57,7 @@
                         </div>
                         <div class="header-message-bell-box">
                             <button class="header-message-bell-button">
-                                <img class="normal-bell" src="/static/image/bell-icon.png">
+                                <img class="normal-bell" src="/image/bell-icon.png">
                             </button>
                         </div>
                         <div class="header-member-menu-box">
@@ -65,7 +65,7 @@
                                 <div class="header-member-picture-box">
                                     <div class="header-member-picture"></div>
                                 </div>
-                                <img class="header-member-picture-arrow"src="/static/image/down-arrow-icon.png">
+                                <img class="header-member-picture-arrow"src="/image/down-arrow-icon.png">
                             </div>
                             <div class="header-member-menu-dropdown">
                                 <div class="header-member-info-box">
@@ -91,26 +91,26 @@
                     <div class="header-mobile-member-menu-container member-menu-open">
                         <div class="member-menu-header-box">
                             <button class="member-menu-out-button">
-                                <img class="member-menu-out-button-img" src="/static/image/x-icon.png">
+                                <img class="member-menu-out-button-img" src="/image/x-icon.png">
                             </button>
                         </div>
                         <div class="member-menu-body-box">
                             <!-- 로그인 x -->
-                            <div class="member-menu-login-box no-login-status" style="display: none;">
+                            <div class="member-menu-login-box no-login-status" >
                                 <div class="no-login-box" >
                                     <h4>로그인 해주세요</h4>
                                     <p class="member-menu-login-button">로그인
-                                        <img src="/static/image/arrow-icon.png">
+                                        <img src="/image/arrow-icon.png">
                                     </p>
                                 </div>
                             </div>
 
                             <!-- 로그인 o -->
-                            <div class="member-menu-login-box login-status">
+                            <div class="member-menu-login-box login-status"  style="display: none;">
                                 <div class="no-login-box" style="display: none;">
                                     <h4>로그인 해주세요</h4>
                                     <p class="member-menu-login-button">로그인
-                                        <img src="/static/image/arrow-icon.png">
+                                        <img src="/image/arrow-icon.png">
                                     </p>
                                 </div>
                                 <div class="login-box">
@@ -159,5 +159,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="/static/js/main/header.js"></script>
+<script src="/js/main/header.js"></script>
 </html>
