--- a/src/main/resources/templates/member/member-join.html
+++ b/src/main/resources/templates/member/member-join.html
@@ -88,7 +88,7 @@
 
                             <div class="join-form-button-box">
                                 <button type="submit" class="join-button" disabled>회원가입</button>
-                                <a href="/distributor/join" class="distributor-join-a">유통업체로 가입하시나요?</a>
+                                <a href="/distributor/distributor-join" class="distributor-join-a">유통업체로 가입하시나요?</a>
                             </div>
                         </div>
                     </form>
