--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -89,7 +89,7 @@
                                     <div class="line"></div>
                                     <a href="#" >비밀번호 찾기</a>
                                     <div class="line"></div>
-                                    <a href="#" >회원 가입</a>
+                                    <a href="/member/member-join" >회원 가입</a>
                                 </div>
                             </div>
 
