--- a/src/main/resources/templates/member/member-join.html
+++ b/src/main/resources/templates/member/member-join.html
@@ -104,5 +104,7 @@
     globalThis.code;
 </script>
 <script src="/js/main/member-join-service.js"></script>
+<script src="/js/main/check.js"></script>
+<script src="/js/main/password-button.js"></script>
 <script src="/js/main/member-join.js"></script>
 </html>
