버튼 오류 수정

--- a/src/main/resources/templates/distributor/distributor-join.html
+++ b/src/main/resources/templates/distributor/distributor-join.html
@@ -53,7 +53,7 @@
                                         <input type="password" class="input-text input-password"
                                                name="distributorPassword" placeholder="영문+숫자 조합 8자리 이상 입력해주세요."
                                                th:field="*{distributorPassword}">
-                                        <button type="button" class="sub-button password-show-button" >표시</button>
+                                        <button type="button" class="sub-button show password-show-button" >표시</button>
                                     </div>
                                     <div class="error-msg password-error"></div>
                                 </fieldset>
