--- a/src/main/resources/templates/main/login.html
+++ b/src/main/resources/templates/main/login.html
@@ -94,7 +94,7 @@
                             </div>
 
                             <div class="login-form-container">
-                                <button class="oauth-button oauth-button-kakao">
+                                <button type="button" class="oauth-button oauth-button-kakao" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=ff04d75665b07543e607a0122abcd22d&redirect_uri=http://localhost:10000/member/kakao-login&response_type=code'">
                                     <img src="/image/comment-bubble-icon.png">
                                     <p>카카오로 시작</p>
                                 </button>
