--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -58,7 +58,7 @@ legend {
 }
 
 .box {
-    background: #fafafa;
+    /* background: #fafafa; */
     text-size-adjust: 100%;
     display: flex;
     flex-direction: column;
@@ -66,9 +66,9 @@ legend {
     min-height: 100%;
 }
 
-.container {
+/* .container {
     background-color: rgb(0, 199, 174);
-}
+} */
 
 
 .normal-bell{
