--- a/src/main/resources/static/css/board/distributor-board-list.css
+++ b/src/main/resources/static/css/board/distributor-board-list.css
@@ -416,6 +416,41 @@
     font-weight: 700;
 }
 
+.search-box {
+    margin-bottom: 1rem;
+}
+
+.search-container {
+    background-color: #FFF3AD;
+    width: 100%;
+    height: 3rem;
+}
+
+.search-input-box {
+    display: flex;
+    justify-content: flex-start;
+    padding: 0.46rem 0.5rem;
+    align-items: center;
+}
+
+.search-input-container {
+    width: 100%;
+    display: flex;
+    padding-top: 0.3rem;
+}
+
+.serach-icon {
+    width: 1.6em;
+    height: 1.6rem;
+}
+
+.search-input {
+    margin-left: 0.5rem;
+    width: 100%;
+    border: none;
+    background: none;
+}
+
 
 @media (min-width: 768px) {
     .hot-content-img {
