--- a/src/main/resources/templates/board/distributor/distributor-board-list.html
+++ b/src/main/resources/templates/board/distributor/distributor-board-list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,44 +7,7 @@
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="icon" href="/image/favicon.png">
     <link rel="stylesheet" href="/static/css/board/distributor-board-list.css">
-    <title>유통업체 게시판</title>
-    <style>
-        .search-box {
-            margin-bottom: 1rem;
-        }
-
-        .search-container {
-            background-color: #FFF3AD;
-            width: 100%;
-            height: 3rem;
-        }
-
-        .search-input-box {
-            display: flex;
-            justify-content: flex-start;
-            padding: 0.46rem 0.5rem;
-            align-items: center;
-        }
-
-        .search-input-container {
-            width: 100%;
-            display: flex;
-            padding-top: 0.3rem;
-        }
-
-        .serach-icon {
-            width: 1.6em;
-            height: 1.6rem;
-        }
-
-        .search-input {
-            margin-left: 0.5rem;
-            width: 100%;
-            border: none;
-            background: none;
-        }
-
-    </style>
+    <title>유통업체 게시판- 목록</title>
 </head>
 
 <body>
